--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </section>
     <!-- -------project--------- -->
-    <section id="project"   data-bg="#0000">
+    <section id="project" data-bg="#0000">
       <div class="inner">
         <div class="project-title flex">
           <div class="project-mn">
@@ -159,7 +159,7 @@
       </div>
     </section>
     <!-- -------work--------- -->
-    <section id="work"  data-bg="#0000">
+    <section id="work" data-bg="#0000">
       <div class="banner">
         <span>I will show you infinite possibilities. </span>
         <span> 무한한 가능성을 보여드리겠습니다.💫</span>
@@ -167,11 +167,85 @@
       <div class="inner flex">
         <div class="inner-box">
           <div class="work-desc">
-            <p>WORK<br>
-              ARCHIVE</p>
+            <p class="work-title"><span>WORK</span>
+              <span>ARCHIVE</span>
+            </p>
+            <ul class="desc-index">
+              <li><a href="#">
+                  <p class="br">GENTLE
+                    MONSTER</p>
+                  <div class="summary"><b>jquery / Cube / Swiper</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>HEINEKEN</p>
+                  <div class="summary"><b>transform</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>MARIO</p>
+                  <div class="summary">
+                    <b>jquery / 반응형</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>APPLE</p>
+                  <div class="summary">
+                    <b>js / accordion / Swiper</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>ACE BED</p>
+                  <div class="summary"><b>js / Clone / Swiper / 반응형</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>LOTTE</p>
+                  <div class="summary"><b>js / Clone</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>YG</p>
+                  <div class="summary"><b>jquery / Grid</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>CHEONGWADAE</p>
+                  <div class="summary"><b>jquery / 반응형</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>DISNEY</p>
+                  <div class="summary"><b>jquery / Cube / Swiper</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>BANYANTREE</p>
+                  <div class="summary"><b>jquery</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>POLO</p>
+                  <div class="summary"><b>반응형 / sticky</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>CHANEL</p>
+                  <div class="summary"><b>반응형</b>
+                  </div>
+                </a></li>
+              <li><a href="#">
+                  <p>DISNEY</p>
+                  <div class="summary"><b>반응형</b>
+                  </div>
+                </a></li>
+            </ul>
           </div>
           <ul class="flex work-list">
             <li><a href="#" class="on"><img src="./src/assets/work.jpg" alt=""></a></li>
+            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
             <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
             <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
             <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
@@ -185,13 +259,100 @@
         </div>
       </div>
     </section>
-    <!-- -------uxui--------- -->
-    <section id="uxui" data-bg="#fffff"> </section>
     <!-- -------skill--------- -->
-    <section id="about"> </section>
+    <section id="about" data-bg="#fffff">
+      <div class="about-banner">
+        <span>ABOUT ME🚀</span><span>ABOUT ME👽</span><span>ABOUT ME💭</span> <span>ABOUT ME🚀</span><span>ABOUT
+          ME👽</span><span>ABOUT ME💭
+      </div>
+      <div class="inner">
+        <div class="introduce">
+          <figure class="flex">
+            <img class="pc" src="./src/assets/me.jpg" alt="">
+            <img class="mobile" src="./src/assets/me2.jpg" alt="">
+            <figcaption>
+              <p><span>NAME</span><span class="kor">김나연</span></p>
+              <p><span>BIRTH</span><span>2000 . 12 . 07</span></p>
+              <p><span>ADDRESS</span><span class="kor">서울특별시 영등포구</span></p>
+              <p><span>E-MAIL</span><span>kny8664@naver.com</span></p>
+              <div class="skill">
+                <p>SKILL</p>
+                <ul class="flex">
+                  <li><img src="./src/assets/htmltLOGO.png" alt=""></li>
+                  <li><img src="./src/assets/cssLOGO.png" alt=""></li>
+                  <li><img src="./src/assets/jslLOGO.png" alt=""></li>
+                  <li><img src="./src/assets/figmaLOGO.png" alt=""></li>
+                  <li><img src="./src/assets/photoshopLOGO.png" alt=""></li>
+                  <li><img src="./src/assets/illustrateLOGO.png" alt=""></li>
+                  <li><img src="./src/assets/githubLOGO.png" alt=""></li>
+                </ul>
+              </div>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="word">
+          <ul class="flex">
+            <li class="side">FLEXIBLE</li>
+            <li class="top kor" style="font-weight: bold;">소통</li>
+            <li class="side">REACT</li>
+            <li class="top kor" style="font-weight: bold;">배움</li>
+            <li class="bottom">RESPONSIBILITY</li>
+          </ul>
+          <ul class="flex">
+            <li class="side kor">긍정적인</li>
+            <li class="top">ENTERPRISING</li>
+            <li class="side">PRONTEND</li>
+            <li class="bottom kor">도전적인</li>
+          </ul>
+          <ul class="flex">
+            <li class="side" style="font-weight: bold;">DEVELOPER</li>
+            <li class="top kor" style="font-weight: bold;">협력적인</li>
+            <li class="side kor">창의적인</li>
+            <li class="bottom" style="font-weight: bold;">JAVASCRIPT</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="introduce" data-bg="#0000">
+      <div class="inner">
+        <div class="contact-title">
+          <h2>Shining like light</h2>
+          <p> 빛처럼 빠른 성장 속도를 보려드리겠습니다.</p>
+          <img src="./src/assets/star.png" alt="" class="star">
+        </div>
+        <div class="contact-endless">
+          <p class="endless">Endless</p>
+          <span class="endless flex"><figure><img src="./src/assets/endlessgif.gif" alt=""></figure><p>learning</p></span>
+          <p class="white"> 현재에 안주 하지 않고 끝없이 배워 나가겠습니다.</p>
+        </div>
+        <div class="contact-desc">
+          배움과 책임감을 바탕으로 <span>사용자 중심의 경험</span>을 만들고,
+          기술을 통해 세상에 긍정적인 변화를 가져오는 것을 목표로 합니다.<br>
+          끊임없이 배우고, 협력하며, 책임감을 갖고 한 단계씩<span>성장</span>해 나가겠습니다.
+        </div>
+      </div>
+    </section>
   </main>
-  <footer id="footer" role="contentinfo"></footer>
+  <footer id="footer" role="contentinfo"  data-bg="#0000">
+    <div class="inner">
+      <div class="contact">
+        <h2>CONTACT</h2>
+        <p>web publisher</p>
+      </div>
+      <div class="sns">
+        <p>Let's work together </p>
+        <p>Get in touch</p>
+        <span class="instagram"><a href="$">INSTAGRAM</a></span>
+        <span class="email"><a href="$">EMAIL</a></span>
+        <span class="phone"><a href="$">01012345678</a></span>
+      </div>
+    </div>
+  </footer>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right_alt"
