--- a/index.html
+++ b/index.html
@@ -250,19 +250,21 @@
             </ul>
           </div>
           <ul class="flex work-list">
-            <li><a href="#" class="on"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-            <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+            <div class="flex">
+              <li><a href="#" class="on"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+            </div>
           </ul>
         </div>
       </div>
@@ -304,7 +306,7 @@
             <li class="side kor" style="font-weight: bold;">소통</li>
             <li class="top">REACT</li>
             <li class="side kor" style="font-weight: bold;">배움</li>
-            <li class="bottom">RESPONSIBILITY</li>
+            <li class="bottom">RESPONSIBILITY</li> 
           </ul>
           <ul class="flex">
             <li class="side kor">긍정적인</li>
