--- a/index.html
+++ b/index.html
@@ -282,19 +282,19 @@
           </div>
           <ul class="flex work-list">
             <div class="flex">
-              <li class="link"><a href="#" class="on"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
-              <li class="link"><a href="#"><img src="./src/assets/work.jpg" alt=""></a></li>
+              <li class="link work01"><a href="#">1</a></li>
+              <li class="link work02"><a href="#">2</a></li>
+              <li class="link work03"><a href="#">3</a></li>
+              <li class="link work04"><a href="#">4</a></li>
+              <li class="link work05"><a href="#">5</a></li>
+              <li class="link work06"><a href="#">6</a></li>
+              <li class="link work07"><a href="#">7</a></li>
+              <li class="link work08"><a href="#">8</a></li>
+              <li class="link work09"><a href="#">9</a></li>
+              <li class="link work10"><a href="#">10</a></li>
+              <li class="link work11"><a href="#">11</a></li>
+              <li class="link work12"><a href="#">12</a></li>
+              <li class="link work13"><a href="#">13</a></li>
             </div>
           </ul>
         </div>
